# uttr

./: .gitignore  LICENSE  README.md  build.sh  uttr.entitlements
.cursor/rules/: project-overview.mdc  swift-guidelines.mdc  xcode-project-structure.mdc
.github/workflows/: build.yml  release.yml
Assets.xcassets/AppIcon.appiconset/: Contents.json
Casks/: uttr.rb
Swift/: HotkeyManager.swift  Logger.swift  MenuBarIconManager.swift  MenuBarPopoverView.swift  PermissionManager.swift  SettingsManager.swift  SettingsTabView.swift  SettingsWindowView.swift  TranscriptionServer.swift  TranscriptionServerClient.swift  uttr.swift
Swift/Design/: DesignTokens.swift
Swift/Transcription/: FluidAudioProvider.swift  PythonWhisperProvider.swift  TranscriptionProvider.swift
bench/: Package.swift  run.sh
bench/Sources/bench/: Benchmark.swift
docs/: CONTRIBUTING.md  PACKAGING_SUMMARY.md  architecture.md  configuration.md  development.md  getting-started.md  homebrew-tap.md  releasing.md  troubleshooting.md
docs/homebrew/: speechtotextapp.rb
stt-server-py/: config.py  pyproject.toml  settings.yaml  transcription_server.py
uttr.xcodeproj/: project.pbxproj
uttr.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
uttr.xcodeproj/project.xcworkspace/xcuserdata/shishiraravindan.xcuserdatad/: UserInterfaceState.xcuserstate
uttr.xcodeproj/xcshareddata/xcschemes/: uttr.xcscheme
